fixed missing color on IOS

--- a/css/start-page.css
+++ b/css/start-page.css
@@ -86,6 +86,7 @@
   border-radius: 0.3rem;
   cursor: pointer;
   transition: scale 0.2s ease-in-out;
+  color: black;
 }
 
 .home-buttons-inner {
@@ -106,6 +107,7 @@
   background-color: var(--white-color);
   cursor: pointer;
   transition: scale 0.2s ease-in-out;
+  color: black;
 }
 
 .inner-buttons:hover,
